Añadi muchas strings a la carpeta values para evitar los warnings, además de que arreglé la vista de calendario, ya que se veía amontonada y también arreglé el fragmento de ingresar codigo, usando sharedpreferences, proximo commit tendrá funcionamiento integrado con el fragmento de equipos, para que se muestre su imagen y sus datos en vez de los harcodeados

--- a/app/src/main/res/layout/activity_partido.xml
+++ b/app/src/main/res/layout/activity_partido.xml
@@ -42,7 +42,7 @@
             android:id="@+id/partido_nombre_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Equipo 1"
+            android:text="@string/item_jornada_equipo_1"
             android:textColor="@color/cardview_light_background"
             android:padding="10dp"
             android:textSize="20sp"
@@ -52,7 +52,7 @@
             android:id="@+id/partido_marcador_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
+            android:text="@string/activity_partido_0"
             android:background="@color/cardview_light_background"
             android:padding="5dp"
             android:textSize="30sp"
@@ -61,7 +61,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="VS"
+            android:text="@string/activity_partido_vs"
             android:textColor="@color/cardview_light_background"
             android:padding="10dp"
             android:textSize="30sp"
@@ -71,7 +71,7 @@
             android:id="@+id/partido_marcador_visita"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
+            android:text="@string/activity_partido_0"
             android:background="@color/cardview_light_background"
             android:padding="5dp"
             android:textSize="30sp"
@@ -89,7 +89,7 @@
             android:id="@+id/partido_nombre_visita"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Equipo 2"
+            android:text="@string/item_jornada_equipo_2"
             android:textColor="@color/cardview_light_background"
             android:padding="10dp"
             android:textSize="20sp"
