--- a/app/src/main/res/layout/fragment_goleadores.xml
+++ b/app/src/main/res/layout/fragment_goleadores.xml
@@ -89,7 +89,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="POS"
+            android:text="@string/fragment_goleadores_pos"
             android:textColor="@color/cardview_light_background"
             android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
             android:id="@+id/goleadores_nombre"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Jugador"
+            android:text="@string/fragment_goleadores_jugador"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/goleadores_guideline_10_v"
@@ -112,7 +112,7 @@
             android:id="@+id/goleadores_equipo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Equipo"
+            android:text="@string/fragment_goleadores_equipo"
             android:textColor="@color/cardview_light_background"
             android:textAlignment="center"
             app:layout_constraintStart_toStartOf="@id/goleadores_guideline_55_v"
@@ -123,7 +123,7 @@
             android:id="@+id/goleadores_goles"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Goles"
+            android:text="@string/fragment_goleadores_goles"
             android:textColor="@color/cardview_light_background"
             android:textAlignment="center"
             app:layout_constraintStart_toStartOf="@id/goleadores_guideline_90_v"
