--- a/app/src/main/res/layout/fragment_tablageneral.xml
+++ b/app/src/main/res/layout/fragment_tablageneral.xml
@@ -97,7 +97,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="POS"
+            android:text="@string/fragment_goleadores_pos"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,7 @@
             android:id="@+id/tabla_nombre"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Equipo"
+            android:text="@string/fragment_goleadores_equipo"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_10_v"
@@ -120,7 +120,7 @@
             android:id="@+id/tabla_PJ"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="PJ"
+            android:text="@string/fragment_tablageneral_pj"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_50_v"
@@ -131,7 +131,7 @@
             android:id="@+id/tabla_PG"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="PG"
+            android:text="@string/fragment_tablageneral_pg"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_56_v"
@@ -142,7 +142,7 @@
             android:id="@+id/tabla_PE"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="PE"
+            android:text="@string/fragment_tablageneral_pe"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_62_v"
@@ -153,7 +153,7 @@
             android:id="@+id/tabla_PP"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="PP"
+            android:text="@string/fragment_tablageneral_pp"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_68_v"
@@ -164,7 +164,7 @@
             android:id="@+id/tabla_GF"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="GF"
+            android:text="@string/fragment_tablageneral_gf"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_74_v"
@@ -175,7 +175,7 @@
             android:id="@+id/tabla_GC"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="GC"
+            android:text="@string/fragment_tablageneral_gc"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_80_v"
@@ -186,7 +186,7 @@
             android:id="@+id/tabla_DG"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="DG"
+            android:text="@string/fragment_tablageneral_dg"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             app:layout_constraintStart_toStartOf="@id/tabla_guideline_86_v"
@@ -197,7 +197,7 @@
             android:id="@+id/tabla_PTS"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="PTS"
+            android:text="@string/fragment_tablageneral_pts"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
             android:textStyle="bold"
