--- a/app/src/main/res/layout/item_goleador.xml
+++ b/app/src/main/res/layout/item_goleador.xml
@@ -93,7 +93,7 @@
         android:id="@+id/goleador_POS"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/activity_partido_0"
         android:textAlignment="center"
 
         app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
         android:id="@+id/goleador_nombre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Default"
+        android:text="@string/item_goleador_default"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="@id/goleador_guideline_25_v"
         app:layout_constraintEnd_toEndOf="@id/goleador_guideline_55_v"
@@ -134,7 +134,7 @@
         android:id="@+id/goleador_equipo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Pallacracks"
+        android:text="@string/fragment_equipo_teamname"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="@id/goleador_guideline_65_v"
         app:layout_constraintEnd_toEndOf="@id/goleador_guideline_90_v"
@@ -144,7 +144,7 @@
         android:id="@+id/goleador_goles"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/activity_partido_0"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="@id/goleador_guideline_90_v"
         app:layout_constraintEnd_toEndOf="parent"
