--- a/app/src/main/res/layout/activity_ingresar_jugadores.xml
+++ b/app/src/main/res/layout/activity_ingresar_jugadores.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,7 +16,7 @@
         android:id="@+id/ingresar_jugadores_btn_siguiente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="siguiente"
+        android:text="@string/activity_ing_jug_siguiente"
         android:layout_gravity="top|end"
         />
 
