--- a/app/src/main/res/layout/fragment_foro.xml
+++ b/app/src/main/res/layout/fragment_foro.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toTopOf="@id/fragment_foro_sendmessage_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:hint="Ingresa tu mensaje..."
+        android:hint="@string/fragment_foro_hint"
         android:layout_width="match_parent"
         android:layout_height="150dp"/>
 
@@ -27,7 +27,7 @@
         android:id="@+id/fragment_foro_sendmessage_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enviar mensaje"
+        android:text="@string/fragment_foro_send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
