--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -14,7 +14,7 @@
         android:id="@+id/item_evento_jugador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Luis Fernando Gutierrez Preciado"
+        android:text="@string/item_evento_jugador_def"
         />
 
 
