--- a/app/src/main/res/layout/item_ingresa_jugador.xml
+++ b/app/src/main/res/layout/item_ingresa_jugador.xml
@@ -59,7 +59,7 @@
         app:layout_constraintEnd_toStartOf="@id/ingresa_jugador_guideline_70_v"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ingresa_jugador_guideline_30_h"
-        android:hint="ingresa el nombre"
+        android:hint="@string/item_ingresa_jugador_nombre"
         android:textAlignment="center"
         />
     <androidx.appcompat.widget.AppCompatImageButton
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_90_v"
-        android:text="Expediente:"
+        android:text="@string/item_ingresa_jugador_expediente"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_guideline_30_h"
         />
     <androidx.appcompat.widget.AppCompatEditText
