--- a/app/src/main/res/layout/item_jugador.xml
+++ b/app/src/main/res/layout/item_jugador.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Luis Fernando Gutierrez Preciado"
+        android:text="@string/item_evento_jugador_def"
         app:layout_constraintTop_toBottomOf="@id/item_jugador_imagen"/>
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="670965 ISC"
+        android:text="@string/item_jugador_expediente_default"
         app:layout_constraintTop_toBottomOf="@id/item_jugador_nombreJugador"/>
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_marginTop="5dp"
@@ -39,9 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Goles: 27"
+        android:text="@string/item_jugador_goles_default"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@id/item_jugador_expediente_y_carrera"
         app:layout_constraintRight_toLeftOf="@id/item_jugador_amarillas"/>
@@ -52,8 +52,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_marginRight="30dp"
-        android:text="Amarillas: 0"
+        android:layout_marginEnd="30dp"
+        android:text="@string/item_jugador_amarillas_default"
         app:layout_constraintTop_toBottomOf="@id/item_jugador_expediente_y_carrera"
         app:layout_constraintLeft_toRightOf="@id/item_jugador_goles"
         app:layout_constraintRight_toLeftOf="@id/item_jugador_rojas"
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Rojas: 2"
+        android:text="@string/item_jugador_rojas_default"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/item_jugador_amarillas"
         app:layout_constraintTop_toBottomOf="@id/item_jugador_expediente_y_carrera"/>
