--- a/app/src/main/res/layout/login_fut.xml
+++ b/app/src/main/res/layout/login_fut.xml
@@ -14,11 +14,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:src="@drawable/logo_iteso"
-        ></androidx.appcompat.widget.AppCompatImageView>
+        />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_iniciar"
-        android:text="Ingresa"
+        android:text="@string/login_fut_ingresa"
         android:textColor="@android:color/white"
         android:layout_marginTop="50dp"
         android:layout_marginLeft="75dp"
@@ -29,11 +29,10 @@
         app:layout_constraintTop_toBottomOf="@+id/login_image_iteso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ></androidx.appcompat.widget.AppCompatButton>
+        />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_darDeAlta"
-        android:text="Crear Equipo"
-
+        android:text="@string/login_fut_crearequipo"
         android:textColor="@android:color/white"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="75dp"
@@ -44,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_iniciar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ></androidx.appcompat.widget.AppCompatButton>
+        />
 
 
 
