--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -5,8 +5,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/item_evento_icono"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:src="@drawable/escudo_default"
         />
 
