Ya se puede subir imagenes a la base de datos en parse, por lo que ya funciona la creaciion de equipos. Ademas, tambien ahora se muestra la fecha envez del resultado, si la fecha del partido aun no llega, las actividades modificadas fueron crearequipo, y la de calendario.

--- a/app/src/main/res/layout/item_ingresa_jugador.xml
+++ b/app/src/main/res/layout/item_ingresa_jugador.xml
@@ -45,7 +45,7 @@
         android:id="@+id/ingresa_jugador_foto"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/hector_chavez"
+        android:src="@drawable/ic_account_box_black_24dp"
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toStartOf="@id/ingresa_jugador_guideline_30_v"
         app:layout_constraintTop_toTopOf="parent"
