Quite muchos warnings en xml y en codigos, sin qurer trabajé en master pero bueno, y ya se pueden crear equipos con sus jugadores a la base de datos, y te regresa los codigos para entrar a tu equipo.

--- a/app/src/main/res/layout/item_ingresa_jugador.xml
+++ b/app/src/main/res/layout/item_ingresa_jugador.xml
@@ -86,6 +86,7 @@
         android:id="@+id/ingresa_jugador_expediente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:inputType="numberSigned"
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_90_v"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_etiqueta_expediente"
