--- a/app/src/main/res/layout/activity_partido.xml
+++ b/app/src/main/res/layout/activity_partido.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".partidoActivity">
+    tools:context=".PartidoActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/partido_guideline_40_h"
