--- a/app/src/main/res/layout/crear_equipo.xml
+++ b/app/src/main/res/layout/crear_equipo.xml
@@ -80,6 +80,7 @@
             android:id="@+id/crear_equipo_et_expediente_crearequipo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="numberSigned"
             app:layout_constraintTop_toBottomOf="@id/crear_equipo_tv_expediente_crearequipo"
             />
 
