--- a/app/src/main/res/layout/wait_screen.xml
+++ b/app/src/main/res/layout/wait_screen.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatButton
@@ -10,42 +11,63 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:background = "@android:color/holo_blue_bright"
-        android:text="Inicio"
-        android:textSize="20dp"
+        android:text="@string/wait_screen_inicio"
+        android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        >
-
-        ></androidx.appcompat.widget.AppCompatButton>
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/login_image_espera"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/logo_espera"
-        > </androidx.appcompat.widget.AppCompatImageView>
+        app:layout_constraintBottom_toTopOf="@id/solictud_espera_tv"
+        android:src="@drawable/ic_access_time"
+        />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/solictud_espera_tv"
             android:gravity="center"
-            android:text="Su solicitud esta siendo proccesada"
+            android:text="@string/wait_screen_mensaje"
             android:layout_marginTop="25dp"
-            android:layout_marginLeft="50dp"
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/login_image_espera"
             app:layout_constraintStart_toStartOf="parent"
-            >
-
-
-        </androidx.appcompat.widget.AppCompatTextView>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/solicitud_espera_capitancodigo_tv"
+            />
+    
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/solicitud_espera_capitancodigo_tv"
+            android:text="Codigo del capitan: "
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/solictud_espera_tv"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/solicitud_espera_jugadorcodigo_tv"
+            android:gravity="center"
+            />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/solicitud_espera_jugadorcodigo_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Codigo del jugador: "
+        android:textSize="18sp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/solicitud_espera_capitancodigo_tv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
