--- a/app/src/main/res/layout/item_jornada.xml
+++ b/app/src/main/res/layout/item_jornada.xml
@@ -24,6 +24,15 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="#072146"
+        app:layout_constraintTop_toBottomOf="@id/fragment_calendario_jornada_number"
+        />
+
     <TextView
         android:id="@+id/fragment_calendario_enfrentamiento1_equipo1"
         android:layout_width="wrap_content"
