--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,19 @@
             android:icon="@drawable/equipo"
             android:title="@string/menu_equipo"
             android:visible="false"/>
+
+        <item
+            android:id="@+id/nav_equipos_pendientes"
+            android:icon="@drawable/equipo"
+            android:title="Equipos pendientes"
+            android:visible="false"/>
+
+        <item
+            android:id="@+id/nav_plantillas_pendientes"
+            android:icon="@drawable/equipo"
+            android:title="Plantillas pendientes"
+            android:visible="false"/>
+
         <item
             android:id="@+id/nav_codigo"
             android:icon="@drawable/ic_menu_send"
